Fix profile left nav tile spacing and order (#1871)

--- a/apps/audius-client/packages/web/src/components/upload/UploadChip.module.css
+++ b/apps/audius-client/packages/web/src/components/upload/UploadChip.module.css
@@ -19,6 +19,7 @@
   color: var(--neutral-light-2);
 
   padding: 32px;
+  margin-top: 32px;
 }
 
 .uploadChip:hover {
