--- a/apps/audius-client/packages/web/src/pages/profile-page/components/desktop/ProfileTags.module.css
+++ b/apps/audius-client/packages/web/src/pages/profile-page/components/desktop/ProfileTags.module.css
@@ -27,7 +27,7 @@
 }
 
 .tags {
-  padding-bottom: 24px;
+  margin-top: 32px;
 }
 
 .tags > .tagsContent {
